--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,3 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: python:3.9-slim
+
+Steps: 
+  name: Checkout
+  uses: actions/checkout@v3
